--- a/tucamApp/tucamSrc/Makefile
+++ b/tucamApp/tucamSrc/Makefile
@@ -6,11 +6,18 @@ include $(TOP)/configure/CONFIG
 LIBRARY_IOC += ADTucam
 
 LIB_SRCS += ADTucam.cpp
+# Only include real SDK handler and hardware libraries when not building tests
+ifndef UNIT_TESTING
+LIB_SRCS += TUCAMSDKHandler.cpp
 ifeq (windows-x64, $(findstring windows-x64, $(T_A)))
 LIB_LIBS += TUCam
 endif
 ifeq (linux-x86_64, $(findstring linux-x86_64, $(T_A)))
 LIB_SYS_LIBS += TUCam phxapi-x86_64
+endif
+else
+# Define preprocessor flag for test builds
+USR_CPPFLAGS += -DUNIT_TESTING
 endif
 
 DBD += tucamSupport.dbd
