--- a/tucamSupport/Makefile
+++ b/tucamSupport/Makefile
@@ -12,11 +12,13 @@ endif
 
 ifeq (linux-x86_64, $(findstring linux-x86_64, $(T_A)))
 SRC_DIRS += ../os/linux-x86_64
+ifndef UNIT_TESTING
 LIB_INSTALLS_Linux += ../os/linux-x86_64/libphxapi-x86_64.so
 LIB_INSTALLS_Linux += ../os/linux-x86_64/libTUCam.so
 LIB_INSTALLS_Linux += ../os/linux-x86_64/libTUCam.so.1
 LIB_INSTALLS_Linux += ../os/linux-x86_64/libTUCam.so.1.0
 LIB_INSTALLS_Linux += ../os/linux-x86_64/libTUCam.so.1.0.0
+endif
 endif
 
 INC += TUCamApi.h TUDefine.h
